tests/failing/tup.tail
let v1:<int>4 = [b2iV(tt),2,4,3] in
let v2:[char]1 = ['h','e','l','l','o'] in
let v3:[char]1 = prArrC(v2) in
let v4:<int>4 = prArrI(v1) in
let v7:[int]0 = reduce{[int],[0]}(addi,0,v1) in
let v8:[int]0 = first{[int],[1]}(shape{[char],[1]}(v2)) in
let v9:[int]0 = prSclI(addi(v7,addi(v8,4))) in
i2d(b2iV(ff))
